# gpu-physics-sim

./: README.md  pyproject.toml
shader/: basic.vs
src/gpu_physics_sim/: __init__.py  logger.py
src/gpu_physics_sim/app/: __init__.py  action.py  application.py  input_manager.py  keymap.py  timer.py  window.py
src/gpu_physics_sim/input/: __init__.py  input_manager.py
src/gpu_physics_sim/renderer/: __init__.py  renderer.py
src/gpu_physics_sim/resources/: resource_manager.py
src/gpu_physics_sim/scene/: __init__.py  scene.py
src/gpu_physics_sim/shader/: shader.py
src/gpu_physics_sim/simulation/: base.py
src/gpu_physics_sim/simulation/compute/: compute_solver.py
src/gpu_physics_sim/simulation/cuda/: cuda_solver.py
